--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.1",
   "description": "",
   "main": "index.js",
-  "homework": "https://maksim-leskin.github.io/inspired-trans"
+  "homework": "https://maksim-leskin.github.io/inspired-trans",
   "scripts": {
     "start": "webpack serve",
     "build-dev": "webpack",
